--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Qurossword - A javascript crossword puzzle plugin</title>
+	<title>อักษรไขว้ - Code Breaker/title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/jquery.crossword.js"></script>
