--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>อักษรไขว้</title>
+	<title>อักษรไขว้ - Code Breaker</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/jquery.crossword.js"></script>
 	<script src="js/crossword.js"></script>
 
 	<link type="text/css" rel="stylesheet" href="css/crossword.css">
+	<link rel="favicon" href="logo.jpg"/>
 
 </head>
 
